[FIX] fixed sidebar visibility

--- a/src/liveinternet/web/static/extra.css
+++ b/src/liveinternet/web/static/extra.css
@@ -155,6 +155,5 @@ main {
 
 #sidebarMenu {
   visibility: hidden;
-  transition: visibility 0.3s;
 }
 
